[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://player.gd" id="1"]

[sub_resource type="RectangleShape2D" id="Shape_player"]
size = Vector2(20, 24)

[sub_resource type="RectangleShape2D" id="Shape_attack"]
size = Vector2(30, 30)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("Shape_player")

[node name="SpriteBody" type="Sprite2D" parent="."]

[node name="SpriteArmor" type="Sprite2D" parent="."]

[node name="SpriteWeapon" type="Sprite2D" parent="."]

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("Shape_attack")

[node name="HPBar" type="ProgressBar" parent="."]
offset_left = -15.0
offset_top = -30.0
offset_right = 15.0
offset_bottom = -25.0
max_value = 100.0
value = 100.0
show_percentage = false
